--- a/command/master/score/light.yml
+++ b/command/master/score/light.yml
@@ -20,7 +20,7 @@ patterns:
 
   two:
     type: insert
-    offset: local.loop / 2
+    offset: local.loop + 32
     skip: 2
     pattern:
       type: spread
