Tiny changes to the combiner.

--- a/command/master/score/light4.yml
+++ b/command/master/score/light4.yml
@@ -1,32 +1,29 @@
 type: sequence
 
+variables:
+  switch:
+    type: counter
+    count:  2
+    period: 1/2 second
+
 patterns:
   one:
-    type: insert
-    offset: 32
+    type: choose
+    choose: local.counter
     pattern:
-      type: spread
-      begin: white
-      end: red
-      steps: 32
+      -
+        type: insert
+        offset: 32
+        pattern:
+          type: spread
+          begin: white
+          end: red
+          steps: 32
+      -
+        type: insert
+        pattern:
+          type: spread
+          begin: blue
+          end: white
+          steps: 32
 
-  two:
-    type: insert
-    pattern:
-      type: spread
-      begin: blue
-      end: white
-      steps: 32
-
-elements:
-  -
-    begin: 0
-    end: infinite
-    type: pattern
-    pattern: one
-
-  -
-    begin: 2
-    end: infinite
-    type: pattern
-    pattern: two
