--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -170,18 +170,19 @@ git:
 # for the lighting to work.
 light:
   brightness: 100%
-  count: 240
+  count: 64
   enable: false
   order: rgb
 
   # period needs to be 40ms or up if you are using tk but can be as short as 2ms
   # if you're using hardware lighting.
-  period: 40ms
+  # Update:  period needs to be 200ms on RP!
+  period: 200ms
   type: tk
 
   display:
     background: 0x808080
-    layout: [0, 0]
+    layout: [8, 8]
     padding:
       top: 10
       bottom: 5
@@ -194,7 +195,7 @@ light:
       background: 0x606060
       border:
         color: black
-        width: 0
+        width: 1
       shape: circle
       size: [16, 16]
 
