Now we can build from our Makefile.

--- a/code/Makefile
+++ b/code/Makefile
@@ -6,3 +6,13 @@ clean:
 
 tags:
 	find . -name \*.py | xargs etags
+
+ROOT := /development/echomesh
+BUILD_ROOT := $(ROOT)/code/cpp/echomesh/Builds/MacOSX
+
+debug:
+	cd $(BUILD_ROOT) && xcodebuild -project "echomesh.xcodeproj" -configuration Debug
+
+release:
+	cd $(BUILD_ROOT) && xcodebuild -project "echomesh.xcodeproj" -configuration Release
+
