--- a/code/cpp/echomesh/Builds/VisualStudio2010/echomesh.vcxproj.filters
+++ b/code/cpp/echomesh/Builds/VisualStudio2010/echomesh.vcxproj.filters
@@ -334,6 +334,9 @@
     <ClCompile Include="..\..\Source\Main.cpp">
       <Filter>echomesh\Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\LightReader.cpp">
+      <Filter>echomesh\Source</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\LightConfig.cpp">
       <Filter>echomesh\Source</Filter>
     </ClCompile>
