--- a/code/cpp/echomesh/Builds/VisualStudio2010/echomesh.vcxproj
+++ b/code/cpp/echomesh/Builds/VisualStudio2010/echomesh.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="..\..\Source\yaml-cpp-src\stream.cpp"/>
     <ClCompile Include="..\..\Source\yaml-cpp-src\tag.cpp"/>
     <ClCompile Include="..\..\Source\Main.cpp"/>
+    <ClCompile Include="..\..\Source\LightReader.cpp"/>
     <ClCompile Include="..\..\Source\LightConfig.cpp"/>
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_core\text\juce_CharacterFunctions.cpp">
       <ExcludedFromBuild>true</ExcludedFromBuild>
