--- a/code/cpp/echomesh/Builds/VisualStudio2010/echomesh.vcxproj.filters
+++ b/code/cpp/echomesh/Builds/VisualStudio2010/echomesh.vcxproj.filters
@@ -238,6 +238,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\Log.cpp">
+      <Filter>echomesh\Source</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\LightComponent.cpp">
       <Filter>echomesh\Source</Filter>
     </ClCompile>
