Update Juce, make various changes to our projects.

--- a/code/Makefile
+++ b/code/Makefile
@@ -11,15 +11,15 @@ tags:
 
 ROOT := /development/echomesh/
 BUILD_ROOT := $(ROOT)code/cpp/echomesh/Builds/MacOSX/
-RELEASE_EXECUTABLE := $(BUILD_ROOT)build/Release/echomesh.app/Contents/MacOS/echomesh
-DEBUG_EXECUTABLE := $(BUILD_ROOT)build/Debug/echomesh.app/Contents/MacOS/echomesh
+RELEASE_EXECUTABLE := $(BUILD_ROOT)build/Release/echomesh-client.app/Contents/MacOS/echomesh-client
+DEBUG_EXECUTABLE := $(BUILD_ROOT)build/Debug/echomesh-client.app/Contents/MacOS/echomesh-client
 BIN := $(ROOT)bin/darwin/
 
 debug:
-	cd $(BUILD_ROOT) && xcodebuild -project "echomesh.xcodeproj" -configuration Debug
+	cd $(BUILD_ROOT) && xcodebuild -project "echomesh-client.xcodeproj" -configuration Debug
 	cp $(DEBUG_EXECUTABLE) $(BIN)
 
 release:
-	cd $(BUILD_ROOT) && xcodebuild -project "echomesh.xcodeproj" -configuration Release
+	cd $(BUILD_ROOT) && xcodebuild -project "echomesh-client.xcodeproj" -configuration Release
 	cp $(RELEASE_EXECUTABLE) $(BIN)
 
