Get rid of junk at the end of #endifs.

--- a/code/cpp/echomesh/Builds/Linux/Makefile
+++ b/code/cpp/echomesh/Builds/Linux/Makefile
@@ -1,13 +1,13 @@
 # Automatically generated makefile, created by the Introjucer
 # Don't edit this file! Your changes will be overwritten when you re-save the Introjucer project!
 
-#ifndef CONFIG
-#  CONFIG=Debug
-#endif
-
-ifeq ($(TARGET_ARCH),)
-  TARGET_ARCH := -march=native
+ifndef CONFIG
+  CONFIG=Debug
 endif
+
+#ifeq ($(TARGET_ARCH),)
+#  TARGET_ARCH := -march=native
+#endif
 
 # (this disables dependency generation if multiple architectures are set)
 DEPFLAGS := $(if $(word 2, $(TARGET_ARCH)), , -MMD)
