--- a/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
+++ b/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
@@ -129,6 +129,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\base64\base64.cpp"/>
     <ClCompile Include="..\..\rec\base\RealTime.cpp"/>
     <ClCompile Include="..\..\rec\util\thread\Trash.cpp"/>
     <ClCompile Include="..\..\echomesh\LightComponent.cpp"/>
@@ -1013,6 +1014,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_video\juce_video.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\base64\base64.h"/>
     <ClInclude Include="..\..\rec\base\ArraySize.h"/>
     <ClInclude Include="..\..\rec\base\base.h"/>
     <ClInclude Include="..\..\rec\base\BaseNoJuce.h"/>
