--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -187,8 +187,9 @@ light:
   # period needs to be 40ms or up if you are using tk but can be as short as 2ms
   # if you're using hardware lighting.
   # Update:  period needs to be 200ms on RP!
-  period: 200ms
+  period: 5ms
   type: tk
+  compress: true
 
   display:
     background: white
