--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -134,7 +134,7 @@ delete_backups_after_transfer: false
 
 # Turns on various debugging mechanisms and gives better diagnositics.
 # Does not turn on debug logging.
-debug: true
+debug: false
 
 diagnostics:
   # The diagnostics section lets echomesh developers get more information
